<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_current_note_info"
        android:title="@string/m15"
        android:enabled="false"
        android:icon="@drawable/asterisk"
        android:checkable="false" />

    <item
        android:id="@+id/nav_new"
        android:title="@string/cta2"
        android:icon="@drawable/new_note" />
    <item
        android:id="@+id/nav_save"
        android:title="@string/cta3"
        android:icon="@drawable/save" />
    <item
        android:id="@+id/nav_load"
        android:title="@string/cta4"
        android:icon="@drawable/open" />
    <item
        android:id="@+id/nav_delete"
        android:title="@string/cta5"
        android:icon="@drawable/delete" />
    <item
        android:id="@+id/nav_color"
        android:title="@string/cta6"
        android:icon="@drawable/color" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/share"
        android:title="@string/cta10" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settings"
        android:title="@string/cta11" />

    <item
        android:id="@+id/nav_change_icon"
        android:title="@string/cta12"
        android:icon="@drawable/image" />

    <item
        android:id="@+id/nav_language"
        android:title="@string/cta14"
        android:icon="@drawable/translate" />


</menu>
