<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cta11"
            android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"
            android:paddingTop="50dp"
            android:textStyle="bold"
            android:paddingBottom="30dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/m13" />

        <SeekBar
            android:id="@+id/sizeSeekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="40"
            android:progress="16" />

        <TextView
            android:id="@+id/sizeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dst1"
            android:layout_marginTop="4dp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m12"
            android:layout_marginTop="24dp"
            android:layout_gravity="end" />
    </LinearLayout>
</ScrollView>
